// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component closes the first tab and opens any clicked tab 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    Section 1
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Section 2
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    Section 3
  </button>
  <div
    className="content"
  >
    Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
  </div>
</div>
`;

exports[`Tabs Component renders empty given no tabs 1`] = `<div />`;

exports[`Tabs Component renders the first tab by default 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    Section 1
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Section 2
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    Section 3
  </button>
  <div
    className="content"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </div>
</div>
`;
